[package]
name = "oberled"
version = "0.1.0"
authors = ["Drew Alexander <drewalexander986@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32"] }
critical_section = { package = "critical-section", version = "1.1.2"}
volatile = "0.5.1"
